--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="live-weather-icon-poc/assets/index.09e16274.js"></script>
-    <link rel="modulepreload" href="live-weather-icon-poc/assets/vendor.4628dc8f.js">
-    <link rel="stylesheet" href="live-weather-icon-poc/assets/index.19cd8f00.css">
+    <script type="module" crossorigin src="/assets/index.09e16274.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.4628dc8f.js">
+    <link rel="stylesheet" href="/assets/index.19cd8f00.css">
   </head>
   <body>
     <div id="app"></div>
